Add Red Cross + improve admin

--- a/templates/_include/fr_CD/homepage_footer.html.twig
+++ b/templates/_include/fr_CD/homepage_footer.html.twig
@@ -3,6 +3,7 @@
         Nos partenaires
     </div>
 
+    <img src="{{ asset('fr_CD/res/assos/croix-rouge.jpg') }}" />
     <img src="{{ asset('fr_CD/res/assos/regal.jpg') }}" />
     <img src="{{ asset('fr_CD/res/assos/llab.png') }}" />
 </div>
