--- a/templates/content/fr_CD/how.html.twig
+++ b/templates/content/fr_CD/how.html.twig
@@ -34,7 +34,7 @@
 
                 <p>
                     Nous vous invitons à respecter, à tout instant de votre relation d'entraide,
-                    les consignes sanitaires en vigueur disponible sur ****.
+                    les consignes sanitaires en vigueur recommandées par les autorités de santé.
                 </p>
 
                 <h5 class="font-weight-bold mt-5">
@@ -91,10 +91,15 @@
                 </h5>
 
                 <p>
-                    Aujourd'hui, nous focalisons notre aide sur les professionnels de santé en première
+                    Nous focalisons avant tout notre aide sur les professionnels de santé en première
                     ligne face au virus. Ce sont les soignants, pharmaciens, membres des services d'urgence, de la
                     cellule de riposte, des centres de prise en charge des patients à maladie chronique (diabète,
                     anémie) etc.
+                </p>
+
+                <p>
+                    Le service est également ouvert à toutes les personnes vulnérables au virus de
+                    par l'âge ou la condition de santé.
                 </p>
 
                 <p>
